PyMaker/datas/object2/RawHTML/i801/Python_DOC_referPages.syntax-error-after-installing-futures-package-in-my-virtualenv.txt
<div class="post-text" itemprop="text">
<p>I'm using virtualenvwrapper. Under my <code>virtualenv</code> with python3, I installed <code>futures</code> successfully, then if I install anything else, it will pop up syntax errors which comes from <code>futures</code> package
errors are as follows:</p>
<pre class="lang-bash prettyprint-override"><code>$ pip install futures
Collecting futures
Installing collected packages: futures
Successfully installed futures-3.1.1
$ pip install sklearn
Traceback (most recent call last):
  File "/data/analytics/yliu/.virtualenvs/alice1/bin/pip", line 7, in &lt;module&gt;
    from pip._internal import main
  File "/data/analytics/yliu/.virtualenvs/alice1/lib/python3.6/site-packages/pip/_internal/__init__.py", line 40, in &lt;module&gt;
    from pip._internal.cli.autocompletion import autocomplete
  File "/data/analytics/yliu/.virtualenvs/alice1/lib/python3.6/site-packages/pip/_internal/cli/autocompletion.py", line 8, in &lt;module&gt;
    from pip._internal.cli.main_parser import create_main_parser
  File "/data/analytics/yliu/.virtualenvs/alice1/lib/python3.6/site-packages/pip/_internal/cli/main_parser.py", line 12, in &lt;module&gt;
    from pip._internal.commands import (
  File "/data/analytics/yliu/.virtualenvs/alice1/lib/python3.6/site-packages/pip/_internal/commands/__init__.py", line 6, in &lt;module&gt;
    from pip._internal.commands.completion import CompletionCommand
  File "/data/analytics/yliu/.virtualenvs/alice1/lib/python3.6/site-packages/pip/_internal/commands/completion.py", line 6, in &lt;module&gt;
    from pip._internal.cli.base_command import Command
  File "/data/analytics/yliu/.virtualenvs/alice1/lib/python3.6/site-packages/pip/_internal/cli/base_command.py", line 24, in &lt;module&gt;
    from pip._internal.index import PackageFinder
  File "/data/analytics/yliu/.virtualenvs/alice1/lib/python3.6/site-packages/pip/_internal/index.py", line 41, in &lt;module&gt;
    from pip._internal.wheel import Wheel
  File "/data/analytics/yliu/.virtualenvs/alice1/lib/python3.6/site-packages/pip/_internal/wheel.py", line 7, in &lt;module&gt;
    import compileall
  File "/usr/local/anaconda3/anaconda/lib/python3.6/compileall.py", line 20, in &lt;module&gt;
    from concurrent.futures import ProcessPoolExecutor
  File "/data/analytics/yliu/.virtualenvs/alice1/lib/python3.6/site-packages/concurrent/futures/__init__.py", line 8, in &lt;module&gt;
    from concurrent.futures._base import (FIRST_COMPLETED,
  File "/data/analytics/yliu/.virtualenvs/alice1/lib/python3.6/site-packages/concurrent/futures/_base.py", line 381
    raise exception_type, self._exception, self._traceback
                        ^
SyntaxError: invalid syntax
</code></pre>
<p>I checked the answer in this question: <a href="https://stackoverflow.com/questions/44239805/pip-install-error-within-python-3-virtualenv">pip install error within Python 3 virtualenv</a>, but it doesn't work for me. The <code>futures</code> package is indeed installed in the right version of python which is python 3.6.5.</p>
<p>I tried to install futures on python3.6 globally and everything works fine. so it seems something with the <code>futures</code> and the <code>virtualenv</code>. </p>
<p>Can anyone please help me solve this issue?</p>
<p>Thanks so much</p>
</div>
<div class="post-text" itemprop="text">
<p><a href="https://pypi.org/project/futures/" rel="nofollow noreferrer">futures package at PyPI</a> is a backport of the <a href="https://docs.python.org/3/library/concurrent.futures.html" rel="nofollow noreferrer">concurrent.futures</a> standard library module to Python 2.</p>
<p>To use <code>futures</code> in Python 3 you don't need to install anything, it's a standard library module.</p>
<p>Now your virtualenv contains a broken Python 2 module. I recommend to remove the virtualenv and recreate it.</p>
</div>
<span class="comment-copy">The syntax of giving 3 parameters to <code>raise</code> is for Python 2, not Python 3.</span>
<span class="comment-copy">See <a href="https://docs.python.org/3/reference/simple_stmts.html#the-raise-statement" rel="nofollow noreferrer">docs.python.org/3/reference/…</a> for the Python 3 syntax.</span>
